[gd_scene load_steps=5 format=3 uid="uid://cjrjsmw62bo4a"]

[ext_resource type="Script" path="res://addons/object_creator/Scripts/UIScriptsNew/overview_menu.gd" id="1_bmldj"]
[ext_resource type="Script" path="res://addons/object_creator/Scripts/UIScriptsNew/tree_export_view.gd" id="1_knyqt"]
[ext_resource type="Script" path="res://addons/object_creator/Scripts/UIScriptsNew/tree_class_view.gd" id="1_ognw8"]
[ext_resource type="Theme" uid="uid://du8tldypjrsog" path="res://addons/object_creator/Assets/ThemeAssets/DefaultTheme/default_theme.tres" id="2_wl07f"]

[node name="OverviewMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bmldj")

[node name="ExportMenu" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.45
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2

[node name="ExportTree" type="Tree" parent="ExportMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_wl07f")
columns = 3
column_titles_visible = true
script = ExtResource("1_knyqt")

[node name="ExportButton" type="Button" parent="ExportMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.95
anchor_right = 0.65
anchor_bottom = 0.98
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Export"

[node name="ExportOverviewLabel" type="Label" parent="ExportMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.02
anchor_right = 0.6
anchor_bottom = 0.05
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Export Overview"
horizontal_alignment = 1

[node name="CreateObjectMenu" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.05
anchor_right = 0.45
anchor_bottom = 1.0
offset_right = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2

[node name="CreateObjectsLabel" type="Label" parent="CreateObjectMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.02
anchor_right = 0.6
anchor_bottom = 0.05
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Create new Objects"
horizontal_alignment = 1

[node name="TreeClassView" type="Tree" parent="CreateObjectMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ognw8")
